[project]
name = "timer-app-server"
version = "0.1.0"
description = ""
authors = [
    {name = "lixux_nian",email = "nianluisman@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "flask-cors (>=6.0.1,<7.0.0)",
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "flask-restful (>=0.3.10,<0.4.0)"
]

[tool.poetry]
packages = [{include = "timer_app_server", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
